Added NH and Gamma values to form

--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,8 @@
                         <br>
                         <label>rho:</label>
                         <input type="number" id="rho" value=""><br>
+                        <label>NH:</label>
+                        <input type="number" id="NH" value="" max="1000000000000000000000000000000" min="1000000000000000000"> cm^-2<br>
                     </div>
                     <!-- energy -->
                     <div class="energy item">
@@ -43,6 +45,8 @@
                         <input type="number" id="emax" value="" max="10" min="0.1"> keV<br>
                         <label>flux:</label>
                         <input type="number" id="flux" value="" max="0.00000024" min="0.0000000000001"> erg/s/cm^2<br>
+                        <label>Gamma: </label>
+                        <input type="number" id="gamma"><br>
                     </div>
                     <!-- scattering model -->
                     <div class="scatmodel item">  
